--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-<h2>Ukb-Fractal <a href="https://ukb-dt.github.io/si-3/">Canon</a> · Computation → Engineering → Sciences → Games → Metaphysics</h2>
+<h2>Ukb-Fractal <a href="https://ukb-dt.github.io/254/">Canon</a> · Computation → Engineering → Sciences → Games → Metaphysics</h2>
 <p><strong>Legend:</strong> Soil (θ′) → Roots (θ) → Trunk (Σ) → Branches (h(t)) → Canopy (ΔS).  
 Calculus: \((x,y)\) → \(y(x)\) → \(\frac{dy}{dx}\) → \(\frac{d^{2}y}{dx^{2}}\) → \(\int y\,dx\).  
 Energy/Ops scale: 2 × 10ⁿ.</p>
