--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Energy/Ops scale: 2 × 10ⁿ.</p>
 </thead>
 <tbody>
 <tr><td class="soil"><b>Soil (θ′)</b></td><td><b>Computation</b></td>
-<td>\((x,y)\) — raw variance</td>
+<td>\((x,y)\) — raw <a href="https://ukb-dt.github.io/power-time/">variance</a></td>
 <td>Logical substrate; entropy shaped by rules. Bits, qubits, spikes; automata as proto-life.</td>
 <td>0–1 → kWh/<a href="https://ukb-dt.github.io/theuri/">day</a></td>
 <td>Boolean algebra, Game of Life, λ-calculus, spiking neurons</td></tr>
